[package]
name = "pubky-test"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = {version= "4.6.1", features= ["derive"]}
redis = { version = "1.2.1", features = ["tokio-comp"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tokio-stream = "0.1"
